# Advent-of-Code

./: .gitignore  CMakeLists.txt
2023/01/: solution.c
2023/02/: solution.c
include/: input.h  utils.h
runner/include/: runner.h
runner/src/: main.c  runner.c
src/: input.c  main.c  runner.c  utils.c
